--- a/views/index.ejs
+++ b/views/index.ejs
@@ -60,10 +60,6 @@
                     <p for="section">Section</p>
                     <input type="text" id="section" name="section" placeholder="A">
                 </div>
-                <div class="reg-form-div">
-                    <p for="disname">Display Name</p>
-                    <input type="text" id="disname" name="disname" placeholder="johnnygames">
-                </div>
             </div>
             <div class="reg-form-div-container-parent">
                 <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
@@ -122,12 +118,11 @@
         var adno = window.document.getElementById("adno").value;
         var classs = window.document.getElementById("class").value;
         var section = window.document.getElementById("section").value;
-        var disname = window.document.getElementById("disname").value;
         if (!vehicle1) {
             notyf.error("Please ask your parents to consent for Discord!");
             return;
         }
-        if (!(name && dob && email && phone && adno && classs && section && disname)) {
+        if (!(name && dob && email && phone && adno && classs && section )) {
             notyf.error("Please fill all the fields");
             return;
         }
@@ -185,7 +180,6 @@
         var adno = window.document.getElementById("adno").value;
         var classs = window.document.getElementById("class").value;
         var section = window.document.getElementById("section").value;
-        var disname = window.document.getElementById("disname").value;
         if (selected.length == 0) {
             notyf.error("Please select atleast one field");
             return;
