--- a/views/email.ejs
+++ b/views/email.ejs
@@ -25,6 +25,12 @@
                 It will grant you access to the server and set your display name to the one you selected while
                 registration and allot the fields you had chosen.
                 <br>
+                <span style="font-weight: bold;">Fields you have chosen:</span>
+                <ul>
+                    <% selected.forEach(field => { %>
+                     <li><%= field %></li>
+                    <% }) %>
+                </ul>
                 <br>
                 In case you face any issues, please feel free to DM any moderators.<br>
                 <br>
