--- a/views/email.ejs
+++ b/views/email.ejs
@@ -33,11 +33,14 @@
                     <% }) %>
                 </ul>
                 <br>
-                In case you face any issues, please feel free to DM any moderators.<br>
+                In case you face any issues, please feel free to DM any core members.<br>
                 <br>
                 Revolutionize <br>
                 Yuvraj Mehta, President  (+91 9667080504)<br><br>
                 Nishant Navani, Vice President (+91 98213 82404)
+                <br>
+                Regards
+                Tech Syndicate
 
             </p>
             <% } else { %>
