--- a/views/email.ejs
+++ b/views/email.ejs
@@ -8,7 +8,7 @@
             <% if (age >= 13) { %>
             <p class="thank-you-p">
                 Hi <%= name %>, <br>
-                We have detected that you are above the age of 13, if this is a mistake please contact the mods
+                We have detected that you are above the age of 13, if this is a mistake please contact the core members
                 (details
                 given below).<br> <br>
 
@@ -36,29 +36,32 @@
                 In case you face any issues, please feel free to DM any core members.<br>
                 <br>
                 Revolutionize <br>
-                Yuvraj Mehta, President  (+91 9667080504)<br><br>
+                Yuvraj Mehta, President  (+91 9667080504)<br>
                 Nishant Navani, Vice President (+91 98213 82404)
-                <br>
-                Regards
+                <br><br>
+                Regards <br>
                 Tech Syndicate
 
             </p>
             <% } else { %>
             <p class="thank-you-p">
                 Hi <%= name %>, <br>
-                We have detected that you are under the age of 13, if this is a mistake please contact
-                the mods
-                (details given below).<br> <br>
+                We have detected that you are under the age of 13, if this is a mistake please contact the core members
+                (details
+                given below).<br> <br>
 
                 Since you are underage, you can not join the discord server. Please join the whatsapp group for
                 announcements- <a href="https://techsyndicate.us/24/wh">https://techsyndicate.us/24/wh</a>
                 <br>
                 <br>
-                In case you face any issues, please feel free to DM any moderators.<br>
+                In case you face any issues, please feel free to DM any core members.<br>
                 <br>
                 Revolutionize <br>
-                Yuvraj Mehta, President (+91 9667080504) <br><br>
+                Yuvraj Mehta, President  (+91 9667080504)<br>
                 Nishant Navani, Vice President (+91 98213 82404)
+                <br><br>
+                Regards <br>
+                Tech Syndicate
             </p>
             <% } %>
         </div>
