--- a/views/email.ejs
+++ b/views/email.ejs
@@ -1,8 +1,8 @@
 <html>
 
 <body>
-    <link rel="stylesheet" href="https://intech.techsyndicate.us/style.css">
-    <div id="thank-you" class="reg-container">
+    <link rel="stylesheet" href="style.css">
+    <div id="thank-you" class="reg-container mail">
         <h1 class="title">inTech '24 Registration</h1>
         <div class="reg-form-2">
             <% if (age >= 13) { %>
@@ -35,10 +35,10 @@
                 <br>
                 In case you face any issues, please feel free to DM any core members.<br>
                 <br>
-                Revolutionize <br>
                 Yuvraj Mehta, President  (+91 9667080504)<br>
                 Nishant Navani, Vice President (+91 98213 82404)
                 <br><br>
+                Revolutionize <br>
                 Regards <br>
                 Tech Syndicate
 
@@ -56,16 +56,25 @@
                 <br>
                 In case you face any issues, please feel free to DM any core members.<br>
                 <br>
-                Revolutionize <br>
                 Yuvraj Mehta, President  (+91 9667080504)<br>
                 Nishant Navani, Vice President (+91 98213 82404)
                 <br><br>
+                Revolutionize <br>
                 Regards <br>
                 Tech Syndicate
             </p>
             <% } %>
         </div>
     </div>
+
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+        .mail {
+            background-color: black;
+            font-family: outfit;
+            color: white;
+        }
+    </style>
 </body>
 
 </html>
