--- a/views/email.ejs
+++ b/views/email.ejs
@@ -1,8 +1,13 @@
 <html>
 
 <body>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+    </style>
     <link rel="stylesheet" href="style.css">
-    <div id="thank-you" class="reg-container mail">
+    <div id="thank-you" class="reg-container" style="background-color: black;
+    font-family: outfit;
+    color: white;">
         <h1 class="title">inTech '24 Registration</h1>
         <div class="reg-form-2">
             <% if (age >= 13) { %>
@@ -67,14 +72,6 @@
         </div>
     </div>
 
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
-        .mail {
-            background-color: black;
-            font-family: outfit;
-            color: white;
-        }
-    </style>
 </body>
 
 </html>
