--- a/views/email.ejs
+++ b/views/email.ejs
@@ -3,14 +3,11 @@
 <body>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
-        .mail {
-            padding: 20px;
-        }
     </style>
     <link rel="stylesheet" href="style.css">
     <div id="thank-you" class="reg-container mail" style="background-color: black;
     font-family: outfit;
-    color: white;">
+    color: white; padding: 40px">
         <h1 class="title" style="text-align: center; color: #16e16e;">inTech '24 Registration</h1>
         <div class="reg-form-2">
             <% if (age >= 13) { %>
