--- a/views/email.ejs
+++ b/views/email.ejs
@@ -3,11 +3,14 @@
 <body style="background-color: #1E1E1E; padding: 20px">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+        .im{
+            color: white !important;
+        }
     </style>
     <!-- <link rel="stylesheet" href="style.css"> -->
     <div id="thank-you" class="reg-container mail" style="font-family: outfit;padding: 20px 40px; width: 30%; margin: auto; background-color: #000; color: white; border-radius: 10px; min-width: 400px;">
         <div class="" style="display: flex; justify-content: center;">
-            <img src="header_email.png" alt="" width="35%">
+            <img src="https://drive.google.com/file/d/1DyvXNJ-3T83kFhl4UK8wV482LFuJ6ymQ/view" alt="" width="35%" crossorigin="anonymous">
         </div>
         <h1 class="title" style="text-align: center; color: #16e16e;">inTech '24 Registration</h1>
         <div class="reg-form-2">
