--- a/views/email.ejs
+++ b/views/email.ejs
@@ -10,7 +10,7 @@
     <!-- <link rel="stylesheet" href="style.css"> -->
     <div id="thank-you" class="reg-container mail" style="font-family: outfit;padding: 20px 40px; width: 30%; margin: auto; background-color: #000; color: white; border-radius: 10px; min-width: 400px;">
         <div class="" style="display: flex; justify-content: center;">
-            <img src="https://drive.google.com/file/d/1DyvXNJ-3T83kFhl4UK8wV482LFuJ6ymQ/view" alt="" width="35%" crossorigin="anonymous">
+            <img src="https://drive.lienuc.com/uc?id=1DyvXNJ-3T83kFhl4UK8wV482LFuJ6ymQ" alt="" width="35%" crossorigin="anonymous">
         </div>
         <h1 class="title" style="text-align: center; color: #16e16e;">inTech '24 Registration</h1>
         <div class="reg-form-2">
