--- a/views/email.ejs
+++ b/views/email.ejs
@@ -8,7 +8,7 @@
         }
     </style>
     <!-- <link rel="stylesheet" href="style.css"> -->
-    <div id="thank-you" class="reg-container mail" style="font-family: outfit;padding: 20px 40px; width: 30%; margin: auto; background-color: #000; color: white; border-radius: 10px; min-width: 400px;">
+    <div id="thank-you" class="reg-container mail" style="font-family: sans-serif;padding: 20px 40px; width: 30%; margin: auto; background-color: #000; color: white; border-radius: 10px; min-width: 400px;">
         <div class="" style="display: flex; justify-content: center;">
             <img src="https://drive.lienuc.com/uc?id=1DyvXNJ-3T83kFhl4UK8wV482LFuJ6ymQ" alt="" width="35%" crossorigin="anonymous">
         </div>
@@ -40,10 +40,10 @@
                     <br>
                     <div class="buttons" style="display: flex; flex-direction: row; align-items: center; justify-content: center;gap: 10px;">
                         <a href="https://techsyndicate.us/24/discord" style="text-decoration: none; width: 35%; display: flex; justify-content: center;">
-                            <button style="background-color: #16e16e; font-family: outfit; padding: 10px 0; border-radius: 10px; font-size: 1em; border: none; cursor: pointer; width: 90%;">Discord</button>
+                            <button style="background-color: #16e16e; font-family: sans-serif; padding: 10px 0; border-radius: 10px; font-size: 1em; border: none; cursor: pointer; width: 90%;">Discord</button>
                         </a>
                         <a href="https://techsyndicate.us/24/wh" style="text-decoration: none; width: 35%; display: flex; justify-content: center;">
-                            <button style="background-color: #16e16e; font-family: outfit; padding: 10px 0; border-radius: 10px; font-size: 1em; border: none; cursor: pointer; width: 90%;">Whatsapp</button>
+                            <button style="background-color: #16e16e; font-family: sans-serif; padding: 10px 0; border-radius: 10px; font-size: 1em; border: none; cursor: pointer; width: 90%;">Whatsapp</button>
                         </a>
                     </div>
                 <br>
@@ -75,7 +75,7 @@
                         <br>
                         <div class="buttons"  style="display: flex; flex-direction: row; align-items: center; justify-content: space-evenly;">
                             <a href="https://techsyndicate.us/24/wh" style="text-decoration: none;">
-                        <button style="background-color: #16e16e; font-family: outfit; padding: 10px 30px; border-radius: 10px; font-size: 1em; border: none; cursor: pointer;">Whatsapp</button>
+                        <button style="background-color: #16e16e; font-family: sans-serif; padding: 10px 30px; border-radius: 10px; font-size: 1em; border: none; cursor: pointer;">Whatsapp</button>
                     </a>
                 </div>
                 <br><br>
