--- a/views/email.ejs
+++ b/views/email.ejs
@@ -1,50 +1,80 @@
 <html>
+<body>
+    <link rel="stylesheet" href="https://intech.techsyndicate.us/style.css">
+    <div id="thank-you" class="reg-container">
+        <h1 class="title">inTech '23 Registration</h1>
+        <div class="reg-form-2">
+            <% if (age >= 13) { %>
+            <p class="thank-you-p">
+                Hi <%= name %>, <br>
+                We have detected that you are above the age of 13, if this is a mistake please contact the mods
+                (details
+                given below).<br> <br>
 
-<body style="padding: 20px;">
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
-        * { 
-            color: #000;
-            font-family: "Arial";
-        }
-        body {
-            background: #fff;
-        }
-    </style>
-    <h1>inTech' 24</h1>
-    Hi <%= name %>! <br><br>
-    Thank you for registering for inTech 2024, We have detected that you are above the age of 13, if this is a mistake please contact the core members
-    (details
-    given below)<br><br>
+                We request you to join the discord server at -
+                <a href="https://techsyndicate.us/23/discord">https://techsyndicate.us/23/discord</a> as all communication will take
+                place there.<br> We also request you to join the whatsapp group at - <a
+                    href="https://techsyndicate.us/23/wh">https://techsyndicate.us/23/wh</a> for important announcements.
+                <br>
+                <br>
+                Your discord verifcation code is
+                "<span style="color: #16e16e;"><%= dis_token %></span>". Please
+                send the command "ts verify
+                <span style="color: #16e16e;"><%= dis_token %></span>", In the Unverified chat channel. <br>
+                It will grant you access to the server and set your display name to the one you selected while
+                registration and allot the fields you had chosen.
+                <br>
+                <br>
+                <span style="font-weight: 400; ">Fields you have chosen:</span>
+                <ul>
+                    <% selected.forEach(field => { %>
+                        <li><%= field %></li>
+                        <% }) %>
+                </ul>
+                <br>
+                <br>
+                In case you face any issues, please feel free to DM any core members.
+                <br>
+                <br>
+                Regards, <br>
+                Yuvraj Mehta, President  (+91 9667080504)<br>
+                Nishant Navani, Vice President (+91 98213 82404)
+                <br>
+                <br>
+                Revolutionize! <br>  
 
-    We request you to join the discord server at - <a style="color: #16e16e;" href="https://techsyndicate.us/24/discord">https://techsyndicate.us/24/discord</a> as all communication will take place there. <br>
-    We also request you to join the whatsapp group at - <a style="color: #16e16e;" href="https://techsyndicate.us/24/wh">https://techsyndicate.us/24/wh</a> for important announcements. 
-    
-    <br>
-    <br>
-    Your discord verifcation code is "<span style="color: #16e16e;"><%= token %></span>". Please send the command "<span style="color: #16e16e;">ts verify <%= token %></span>" in the unverified channel.
-    <br>
-    It will grant you access to the server and set your display name to the one you selected while registration and allot the fields you had chosen.
-    <br>
-    <br>
-    <span style="font-weight: 400; ">Fields you have chosen:</span>
-    <ul>
-        <% selected.forEach(field => { %>
-            <li><%= field %></li>
-            <% }) %>
-    </ul>
-    <br>
+            </p>
+            <% } else { %>
+            <p class="thank-you-p">
+                Hi <%= name %>, <br>
+                We have detected that you are under the age of 13, if this is a mistake please contact
+                the mods
+                (details given below).<br> <br>
 
-
-
-    In case you face any issues, please feel free to DM any core members.
-    <br>
-    <br>
-    Regards, <br>
-    Yuvraj Mehta, President  (+91 9667080504)<br>
-    Nishant Navani, Vice President (+91 98213 82404)
-    <br>
-    <br>
-    Revolutionize! <br>   
+                Since you are underage, you can not join the discord server. Please join the whatsapp group for
+                announcements- <a href="https://techsyndicate.us/23/wh">https://techsyndicate.us/23/wh</a>
+                <br>
+                <br>
+                <span style="font-weight: 400; ">Fields you have chosen:</span>
+                <ul>
+                    <% selected.forEach(field => { %>
+                        <li><%= field %></li>
+                        <% }) %>
+                </ul>
+                <br>
+                In case you face any issues, please feel free to DM any moderators.<br>
+                <br>
+                <br>
+                Regards, <br>
+                Yuvraj Mehta, President  (+91 9667080504)<br>
+                Nishant Navani, Vice President (+91 98213 82404)
+                <br>
+                <br>
+                Revolutionize! <br>  
+            </p>
+            <% } %>
+        </div>
+    </div>
 </body>
+
 </html>
