--- a/views/email.ejs
+++ b/views/email.ejs
@@ -1,8 +1,13 @@
 <html>
 <body>
+    <style>
+        body{
+            font-family: sans-serif;
+        }
+    </style>
     <link rel="stylesheet" href="https://intech.techsyndicate.us/style.css">
     <div id="thank-you" class="reg-container">
-        <h1 class="title">inTech '23 Registration</h1>
+        <h1 class="title">inTech '24 Registration</h1>
         <div class="reg-form-2">
             <% if (age >= 13) { %>
             <p class="thank-you-p">
@@ -35,7 +40,6 @@
                 <br>
                 In case you face any issues, please feel free to DM any core members.
                 <br>
-                <br>
                 Regards, <br>
                 Yuvraj Mehta, President  (+91 9667080504)<br>
                 Nishant Navani, Vice President (+91 98213 82404)
@@ -63,7 +67,6 @@
                 </ul>
                 <br>
                 In case you face any issues, please feel free to DM any moderators.<br>
-                <br>
                 <br>
                 Regards, <br>
                 Yuvraj Mehta, President  (+91 9667080504)<br>
